# llm-finetuning-experimentation

./: .gitignore  README.md  pyproject.toml
docs/: docs.md  knowledge.md  progress.md
evaluation/: evaluate.py  ollama_asssistant.py
evaluation/evaluation_dataset/: pg_set.json
evaluation/evaluation_results/: chat-pg-q8_pg_results.json  llama3_pg_results.json
finetune_dataset/datasets/pg/completion/: pg_essays.parquet  pg_essays_split.json  pg_essays_split.parquet
finetune_dataset/datasets/pg/conversation/: pg_greetings.jsonl
finetune_dataset/datasets/pg/dpo/: example.txt  raw_dpo_example.json
finetune_dataset/datasets/pg/pg_essays/: pg_essay_1.txt  pg_essay_10.txt  pg_essay_100.txt  pg_essay_101.txt  pg_essay_102.txt  pg_essay_103.txt  pg_essay_104.txt  pg_essay_105.txt  pg_essay_106.txt  pg_essay_107.txt  pg_essay_108.txt  pg_essay_109.txt  pg_essay_11.txt  pg_essay_110.txt  pg_essay_111.txt  pg_essay_112.txt  pg_essay_113.txt  pg_essay_114.txt  pg_essay_115.txt  pg_essay_116.txt  pg_essay_117.txt  pg_essay_118.txt  pg_essay_119.txt  pg_essay_12.txt  pg_essay_120.txt  pg_essay_121.txt  pg_essay_122.txt  pg_essay_123.txt  pg_essay_124.txt  pg_essay_125.txt  pg_essay_126.txt  pg_essay_127.txt  (+186 more)
modal_finetuning/: Dockerfile  instruction.md
modal_finetuning/merging/: merging.py
modal_finetuning/training/: instruction_new_lora.py
unsloth_notebooks/colab/: merging_adapters.ipynb  vanilla_finetuning.ipynb
unsloth_notebooks/kaggle/: unsloth-completion-continued-lora-finetuning.ipynb  unsloth-completion-new-lora.ipynb  unsloth-instruction-new-lora.ipynb
(+45 files in other folders)
